testsuite/tests/interpreter_errors/invalid_when_clause_return_type/test.out
main.adb
script:1:26: error: Type error: expected Bool but got Str
1 | let p = query p @ _ when "Hello"
  |                          ^^^^^^^ 

